--- a/mediascreem.css
+++ b/mediascreem.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 412px) {
+ .rigth{
+  margin :0;
+  padding:2px;
+}
+
+
+
 @media screen and (max-width: 991px) {
  .nav ul{
       position: fixed;
